Fix: gutter ScrollBar

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --toastify-color-success: oklch(69.6% .17 162.48);
+  --toastify-color-success: oklch(69.6% 0.17 162.48);
 }
 
 @theme inline {
@@ -19,6 +19,9 @@
 body {
   background: var(--background);
   color: var(--foreground);
+
+  scrollbar-gutter: stable both-edges;
+  overflow-y: scroll;
 }
 
 button {
